# GLMan

./: .gitignore  CMakeLists.txt  README.md  glman.sublime-workspace  notes
include/glman/: RIB_File_Interface.h  RIB_Interface.h  RIB_Rendering_Interface.h  Renderer.h  ri.h
include/glman_for_python/: RiModule.h  ri_module.h
include/glman_lib/: scene.h
include/glman_lib/interfaces/: ifd_interface.h  rib_file_interface.h  rib_interface.h  rib_rendering_interface.h
include/glman_lib/loaders/: rib_loader.h
include/glman_lib/parsers/: rib_parser.h
include/glman_lib/renderer/: display.h  material.h  mesh.h  model.h  renderer.h  shader.h  texture.h
include/glman_lib/rib/: attributes.h
include/prman/: ImplicitField.h  RiTypesHelper.h  Ric.h  RifFilter.h  RifPlugin.h  RixBxdf.h  RixBxdfLobe.h  RixColorUtils.h  RixDeepTexture.h  RixIntegrator.h  RixInterfaces.h  RixLPE.h  RixLPEInline.h  RixLighting.h  RixPattern.h  RixProjection.h  RixRIB.h  RixRIBParser.h  RixRNG.h  RixRNGInline.h  RixRNGProgressive.h  RixRiCtl.h  RixShading.h  RixShadingBuiltin.h  RixShadingUtils.h  RixSloInfo.h  RixSubdEval.h  RslPlugin.h  RtxPlugin.h  brickmap.h  dtex.h  ndspy.h  pointcloud.h  prmanapi.h  ri.h  ri.hpp  rx.h  shadeop.h  slo.h
python/glman_for_python/: prman.py
src/glman_cmd/: CMakeLists.txt  glman_cmd.cpp
src/glman_for_python/: CMakeLists.txt  RiModule.cpp  glman_for_python.cpp  ri_module.cpp
src/glman_lib/: CMakeLists.txt  Display.cpp  RIB_File_Interface.cpp  RIB_Interface.cpp  RIB_Rendering_Interface.cpp  Renderer.cpp  scene.cpp
src/glman_lib/interfaces/: ifd_interface.cpp  rib_file_interface.cpp  rib_interface.cpp  rib_rendering_interface.cpp
src/glman_lib/loaders/: rib_loader.cpp
src/glman_lib/renderer/: display.cpp  material.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  texture.cpp
src/glman_lib/rib/: attributes.cpp
tests/: render_file.py  render_image.py  test.py  torus.py
tests/scenes/: pacman.rib
